# best_practice_Django

./: .gitignore  README.md  main.py  pyproject.toml
my_tennis_club/: db.sqlite3
my_tennis_club/members/: admin.py  models.py  urls.py  views.py
my_tennis_club/members/migrations/: 0001_initial.py  0002_member_joined_date_member_phone.py  0003_alter_member_joined_date.py  0004_alter_member_joined_date.py  0005_alter_member_phone.py
my_tennis_club/members/templates/: 404.html  all_members.html  details.html  main.html  motherboard.html  template.html
my_tennis_club/my_tennis_club/: settings.py  urls.py
my_tennis_club/mystaticfiles/: mystyles.css
my_tennis_club/productionfiles/: myglobal.css
